nivasa-macros/tests/trybuild/controller_guard_empty.stderr
error: `#[guard]` requires at least one guard type
 --> tests/trybuild/controller_guard_empty.rs:3:1
  |
3 | #[guard()]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `guard` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `controller`
 --> tests/trybuild/controller_guard_empty.rs:1:21
  |
1 | use nivasa_macros::{controller, guard};
  |                     ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
