nivasa-macros/tests/trybuild/controller_guard_empty.rs
use nivasa_macros::{controller, guard};

#[guard()]
#[controller("/users")]
struct UsersController;

fn main() {}
